--- a/slides/2023-UT/index.html
+++ b/slides/2023-UT/index.html
@@ -932,14 +932,6 @@
           </div>
         </section>
 
-        <section data-background-color="#262626" data-transition="none" class="future">
-          <div class="standard">
-            <h3 class="title" style="color:#d8b365; margin-top:20%; line-height:1.2">
-              How can we use genomics to reconstruct historical <br>
-              <i>ecological interactions</i> among species?</h3>
-          </div>
-        </section>
-
         <section 
           data-background-iframe="../data-html/Hengduan.html" 
           data-background-interactive data-transition="none"
@@ -1060,9 +1052,10 @@
               <h3 class="title" style="color:white"><i>Pedicularis</i> L. (Orobanchaceae)</h3>                            
               <ul style="font-size: 0.7em; margin-top: 50px; color: white; margin-left:5%; margin-right: 0;">
                 <li> >600 species globally, >300 endemic to Hengduan Mountains.</li>
-                <li> Collections spanning 1996-present: KIB, HUH, FMNH, NYBG</li>
                 <li> Spectacular floral diversity; convergent evolution (Ree 2005)</li>
-                <li> Occur in species rich assemblages (5-12) = species interactions</li>
+                <li> Occur in species rich assemblages (5-12)</li>
+                <li> High potential for reproductive conflicts</li>
+                <li> Very rarely form hybrids</li>
               </ul>
             </div>
           </div>
@@ -1071,6 +1064,14 @@
 
       <!-- GENERAL INFO ABOUT REPR INTERFERENCE AND MORPHOLOGY -->
       <section class="future" data-transition="none">
+
+        <!-- <section data-background-color="#262626" data-transition="none" class="future">
+          <div class="standard">
+            <h3 class="title" style="color:#d8b365; margin-top:20%; line-height:1.2">
+              How can we use genomics to reconstruct historical <br>
+              <i>ecological interactions</i> among species?</h3>
+          </div>
+        </section>       -->
 
         <section class="future" data-transition="none">
           <div class="standard">
@@ -1143,7 +1144,7 @@
 
         <section class="future" data-transition="none" style="margin-top: 5%">
           <img data-src="../data-svg/flower-morphology-2.svg">
-        </section>      
+        </section>
 
         <section class="future" data-transition="none">
           <div class="standard">
@@ -1251,7 +1252,7 @@
                 <span style="color:grey"><li> Massive 3RAD sequencing of species and population diversity <br>(117 species, >1,000 specimens).</li></span>
                 <span style="color:grey"><li> Flower and leaf transcriptomes for ~80 species representing convergent phenotypes:
                 beak length, tube length, and color for PhyloGWAS.</li></span>
-                <li> Floral 3D morphometric models constructed by photogrammetry for phyloGWAS.</li>
+                <li> 3D morphometric models of flowers constructed by photogrammetry.</li>
               </ul>
             </div>
             <div style="width:45%; margin: 0; margin-top: 3%; padding: 0; float: left; padding: 10px">
@@ -1264,6 +1265,89 @@
         </section>
 
       </section>
+
+        <!-- ******************************************************** -->
+        <!-- ******************************************************** -->
+        <!-- **** SECTION 4: FUTURE ********************************* -->
+        <!-- ******************************************************** -->
+        <!-- ******************************************************** -->
+        <section class="future" data-transition="none">
+          <section class="future" data-transition="none">          
+            <div class="standard">
+              <h4 class="title"> <i>Diversity and Divergence and Geographic and Genomic Scales</i></h4>
+              <div class="textbox"><p style="text-align:center; font-weight: 400; ">
+                <ul>
+                  <span style="color:lightgrey"><li>1. Biodiversity research using low-cost genomic genotyping.</li></span>
+                  <span style="color:lightgrey"><li>2. Methods and software development<i>: 'spatial' phylogenomics.</i></li></span>
+                  <span style="color:lightgrey"><li>3. Reproductive and genomic diversity in a biodiversity hotspot.</li></span>
+                  <li>4. Future directions of the Eaton lab in Texas.</li>
+                </ul>
+              </p></div>
+            </div>
+          </section>
+
+
+          <section class="future" data-transition="none">
+            <div class="standard">
+              <h4 class="title" style="font-size:39px">A demographic model speciation (rate of postzygotic incompatibilities)</h4>
+              <div class="textbox"><p style="text-align:center; font-weight: 400; margin-top:0;">
+                <ul style="font-size: 1.5rem; margin-top:4%">
+                  <li>To model the rate of fixation of genetic incompatibilities we should model a "time-to-fixation",
+                  during which purifying selection can potentially remove alleles causing DMIs within-species.</li>
+                  <li>We show that this leads to a strong correlation between rates of DMI evolution and Ne.</li>
+                  <li>Our demographic model can be tested by examining the distribution of shared versus unique DMIs
+                      across multiple species on a phylogeny (of a highly hybridizing clade).</li>
+                </ul>
+              </p></div>
+              <img src="./images/DMIs-Fig1.png" style="width:70%; margin-top:2%">
+            </div>
+          </section>
+
+          <!-- AMARANTHUS -->
+          <section
+            data-transition="none" 
+            data-background-image="./images/future-amaranth-1.svg" 
+            class="future" hidden="">
+          </section>          
+
+          <section
+            data-transition="none" 
+            data-background-image="./images/future-amaranth-2.svg" 
+            class="future" hidden="">
+          </section>          
+
+          <section
+            data-transition="none" 
+            data-background-image="./images/future-amaranth-3.svg" 
+            class="future" hidden="">
+          </section>          
+
+          <section
+            data-transition="none" 
+            data-background-image="./images/future-amaranth-4.svg" 
+            class="future" hidden="">
+          </section>
+
+          <section
+            data-transition="none" 
+            data-background-image="./images/future-oaks-1.svg" 
+            class="future" hidden="">
+          </section>
+
+          <section
+            data-transition="none" 
+            data-background-image="./images/future-oaks-0.svg" 
+            class="future" hidden="">
+          </section>     
+
+        </section>
+
+        <section
+          data-transition="none" 
+          data-background-image="./images/acknowledgements.svg" 
+          class="future" hidden="">
+        </section>
+
 
       <!-- ***************************************** -->
       <!-- ***************************************** -->
@@ -1547,122 +1631,10 @@
             data-background-image="../data-img/horn-hybrid-zone-s10-big.jpg" 
             class="future" hidden="">
             <h4 style="color:white;">Horned beak variation <i>within</i> hybrid zone 1. </h4>
-          </section>    
-        </section>
-
-
-        <!-- ******************************************************** -->
-        <!-- ******************************************************** -->
-        <!-- **** SECTION 4: FUTURE ********************************* -->
-        <!-- ******************************************************** -->
-        <!-- ******************************************************** -->
-        <section class="future" data-transition="none">
-          <section class="future" data-transition="none">          
-            <div class="standard">
-              <h4 class="title"> <i>Diversity and Divergence and Geographic and Genomic Scales</i></h4>
-              <div class="textbox"><p style="text-align:center; font-weight: 400; ">
-                <ul>
-                  <span style="color:lightgrey"><li>1. Biodiversity research using low-cost genomic genotyping.</li></span>
-                  <span style="color:lightgrey"><li>2. Methods and software development<i>: 'spatial' phylogenomics.</i></li></span>
-                  <span style="color:lightgrey"><li>3. Reproductive and genomic diversity in a biodiversity hotspot.</li></span>
-                  <li>4. Future directions of the Eaton lab in Texas.</li>
-                </ul>
-              </p></div>
-            </div>
           </section>
-
-          <section class="future" data-transition="none">
-            <div class="standard">
-              <h4 class="title">Mapping genetic incompatibilities in highly hybridizing clades</h4>
-              <div class="textbox"><p style="text-align:center; font-weight:400; line-height: 1.25;">
-                By modeling reproductive isolation as the accumulated effect of many small-effect incompatibilities,
-                genetic drift (Ne) is strongly predictive of the rate of isolation.</p>
-              </div>
-              <img src="./images/DMIs-Fig1.png" style="width:80%; margin-top:4%">
-            </div>
-          </section>
-
-          <section class="future" data-transition="none">
-            <div class="standard">
-              <h4 class="title">Mapping genetic incompatibilities in highly hybridizing clades</h4>
-              <div class="textbox">
-                <p style="text-align:center; font-weight:400; font-size: 1.5rem">
-                <span style="color:darkmagenta">NSF DEB Plant Genomes</span>: Mapping incompatibilities between <i>Amaranthus</i> crops <br>and weedy relatives
-                using Segregation Distortion Mapping</p>
-              </div>
-              <img src="../data-svg/Amaranth-windows.svg" style="width:60%">
-            </div>
-          </section>
-
-          <section class="future" data-transition="none">
-            <div class="standard">
-              <h4 class="title">Mapping genetic incompatibilities in highly hybridizing clades</h4>
-              <div class="textbox">
-                <p style="text-align:center; font-weight:400; font-size: 1.5rem">
-                <span style="color:darkmagenta">NSF DEB Organismal Response to Climate Change</span>: genetic incompatibilities <br>
-                as markers of local adaptation in the Live Oak Syngameon</p>
-              </div>
-              <img src="../data-svg/oaks-2015-summary.svg" style="width:90%">
-            </div>
-          </section>          
-
         </section>
 
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->      
 
-<!--         <section class="future" data-transition="none">
-          <div class="standard">
-            <h2>Acknowledgements</h2>
-            <div class=textbox><p><br>
-              Kasi Molina-Velez<br>
-              Sandra Hoffberg<br>
-              Carlos Alonso Maya Lastra<br>
-              Henry Landis<br>
-              Michael Landis<br></p>
-            </div>
-            <div class=textbox style="font-weight:400"><p>
-              USDA ARS germplasm 
-              NSF DEB<br>
-              NSF PGRP<br>
-              Columbia Lenfest Award<br></p>
-            </div>
-          </div>
-        </section>
- -->
-
-        <section class="future" data-transition="none">
-          <div class="standard">
-              <h2>Acknowledgements</h2>
-              <!-- GRID OF CIRLCE FACES? -->
-              <div class=textbox>
-                  <p>
-                  Richard Ree<br>
-                  Dave Boufford<br>
-                  Huang Shuang-Quan<br>
-                  De-Zhu Li<br>
-                  Patrick McKenzie<br>
-                  Jared Meek<br>
-                  Kasi Molina-Velez<br>
-                  Sandra Hoffberg<br>
-                  Isaac Overcast<br>
-                  </p>
-              </div>
-
-              <div class=textbox style="font-weight:400">
-                  <p>
-                  NSF DEB<br>
-                  NSF DDIG<br>
-                  NSF EAPSI<br>
-                  Columbia Lenfest Award<br>
-                  </p>
-              </div>                    
-              <img src="../data-img/crano-genomeplant.jpg" style="position:absolute; width:40%; left:45%; top:170px">
-              <img src="../data-svg/acknowledge-logos.svg" style="position:absolute; width:40%; left:45%; top:660px">
-          </div>
-        </section>
 
         <!-- SLIDES CLASS ENDING -->
         </div>
